src/LexerAndParser/Parser.java
// Generated from D:/F.I.T.E/Fifth Year/S2/Compiler/Last_Angular_Compiler/src/LexerAndParser/Parser.g4 by ANTLR 4.13.2
package LexerAndParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OpenParen=1, CloseParen=2, OpenBracket=3, CloseBracket=4, OpenBrace=5, 
		CloseBrace=6, LessThan=7, MoreThan=8, Divide=9, Comma=10, SemiColon=11, 
		Colon=12, Dot=13, Assign=14, Arrow=15, Import=16, From=17, Export=18, 
		Class=19, Constructor=20, Return=21, If=22, Else=23, For=24, While=25, 
		Do=26, Break=27, Continue=28, Public=29, Private=30, Protected=31, Var=32, 
		Let=33, Const=34, Number=35, String=36, Boolean=37, Any=38, Console=39, 
		Log=40, NgFor=41, NgIf=42, Store=43, State=44, Actions=45, Reducer=46, 
		Selectors=47, Select=48, Selector=49, Template=50, Of=51, Dispatch=52, 
		On=53, MultiplyAssign=54, DivideAssign=55, ModulusAssign=56, PlusAssign=57, 
		MinusAssign=58, IdentityEquals=59, IdentityNotEquals=60, Equals_=61, NotEquals=62, 
		LessThanEquals=63, GreaterThanEquals=64, BitAnd=65, BitXOr=66, BitOr=67, 
		Multiply=68, Plus=69, Minus=70, Modulus=71, And=72, Or=73, PlusPlus=74, 
		MinusMinus=75, NullLiteral=76, BooleanLiteral=77, StringLiteral=78, DecimalLiteral=79, 
		Identifier=80, WS=81, LineComment=82, BlockComment=83;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_block = 2, RULE_loops = 3, RULE_decl = 4, 
		RULE_import_ = 5, RULE_variableTypeDecl = 6, RULE_dataTypes = 7, RULE_arrayLiteral = 8, 
		RULE_arrayList = 9, RULE_arrayElement = 10, RULE_objectLiteral = 11, RULE_objectBody = 12, 
		RULE_objectKeyValue = 13, RULE_variableDecl = 14, RULE_declTypes = 15, 
		RULE_variableFunctionArguments = 16, RULE_variableFunctionSingleArgument = 17, 
		RULE_anyLiteral = 18, RULE_functionDecl = 19, RULE_normalFunctionDecleration = 20, 
		RULE_arrowFunctionDecleration = 21, RULE_functionBody = 22, RULE_functionParameters = 23, 
		RULE_if = 24, RULE_for = 25, RULE_forParameters = 26, RULE_while = 27, 
		RULE_do = 28, RULE_initialize = 29, RULE_expr = 30, RULE_return = 31, 
		RULE_arithmeticExpr = 32, RULE_identifier_ = 33, RULE_arrayIndex = 34, 
		RULE_operartor = 35, RULE_componentDecorator = 36, RULE_compoenentObject = 37, 
		RULE_constructor = 38, RULE_html = 39, RULE_text = 40, RULE_identifierPath = 41, 
		RULE_interpolationValue = 42, RULE_htmlContent = 43, RULE_htmlElement = 44, 
		RULE_htmlTag = 45, RULE_openTag = 46, RULE_selfClosingTag = 47, RULE_closeTag = 48, 
		RULE_structuralDirectives = 49, RULE_forDirective = 50, RULE_ifDirective = 51, 
		RULE_attribute = 52, RULE_attributeName = 53, RULE_attributeValue = 54, 
		RULE_boundAttribute = 55, RULE_eventName = 56, RULE_eventBinding = 57, 
		RULE_functionCall = 58, RULE_injectableFunctionParameters = 59, RULE_injectableVariableFunctionSingleArgument = 60, 
		RULE_accessModifires = 61, RULE_consoleLog = 62, RULE_storeDecl = 63, 
		RULE_storeBody = 64, RULE_stateSection = 65, RULE_storeStateField = 66, 
		RULE_actionsSection = 67, RULE_actionDecl = 68, RULE_reducerSection = 69, 
		RULE_reducerRule = 70, RULE_selectorsSection = 71, RULE_selectorDecl = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "block", "loops", "decl", "import_", "variableTypeDecl", 
			"dataTypes", "arrayLiteral", "arrayList", "arrayElement", "objectLiteral", 
			"objectBody", "objectKeyValue", "variableDecl", "declTypes", "variableFunctionArguments", 
			"variableFunctionSingleArgument", "anyLiteral", "functionDecl", "normalFunctionDecleration", 
			"arrowFunctionDecleration", "functionBody", "functionParameters", "if", 
			"for", "forParameters", "while", "do", "initialize", "expr", "return", 
			"arithmeticExpr", "identifier_", "arrayIndex", "operartor", "componentDecorator", 
			"compoenentObject", "constructor", "html", "text", "identifierPath", 
			"interpolationValue", "htmlContent", "htmlElement", "htmlTag", "openTag", 
			"selfClosingTag", "closeTag", "structuralDirectives", "forDirective", 
			"ifDirective", "attribute", "attributeName", "attributeValue", "boundAttribute", 
			"eventName", "eventBinding", "functionCall", "injectableFunctionParameters", 
			"injectableVariableFunctionSingleArgument", "accessModifires", "consoleLog", 
			"storeDecl", "storeBody", "stateSection", "storeStateField", "actionsSection", 
			"actionDecl", "reducerSection", "reducerRule", "selectorsSection", "selectorDecl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", null, null, null, "','", 
			"';'", "':'", "'.'", "'='", "'=>'", "'import'", "'from'", "'export'", 
			"'class'", "'constructor'", "'return'", "'if'", "'else'", "'for'", "'while'", 
			"'do'", "'break'", "'continue'", "'public'", "'private'", "'protected'", 
			"'var'", "'let'", "'const'", "'number'", "'string'", "'boolean'", "'any'", 
			"'console'", "'log'", "'*ngFor'", "'*ngIf'", "'store'", "'state'", "'actions'", 
			"'reducer'", "'selectors'", "'select'", "'selector'", "'template'", "'of'", 
			"'dispatch'", "'on'", "'*='", "'/='", "'%='", "'+='", "'-='", "'==='", 
			"'!=='", "'=='", "'!='", "'<='", "'>='", "'&'", "'^'", "'|'", "'*'", 
			"'+'", "'-'", "'%'", "'&&'", "'||'", "'++'", "'--'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OpenParen", "CloseParen", "OpenBracket", "CloseBracket", "OpenBrace", 
			"CloseBrace", "LessThan", "MoreThan", "Divide", "Comma", "SemiColon", 
			"Colon", "Dot", "Assign", "Arrow", "Import", "From", "Export", "Class", 
			"Constructor", "Return", "If", "Else", "For", "While", "Do", "Break", 
			"Continue", "Public", "Private", "Protected", "Var", "Let", "Const", 
			"Number", "String", "Boolean", "Any", "Console", "Log", "NgFor", "NgIf", 
			"Store", "State", "Actions", "Reducer", "Selectors", "Select", "Selector", 
			"Template", "Of", "Dispatch", "On", "MultiplyAssign", "DivideAssign", 
			"ModulusAssign", "PlusAssign", "MinusAssign", "IdentityEquals", "IdentityNotEquals", 
			"Equals_", "NotEquals", "LessThanEquals", "GreaterThanEquals", "BitAnd", 
			"BitXOr", "BitOr", "Multiply", "Plus", "Minus", "Modulus", "And", "Or", 
			"PlusPlus", "MinusMinus", "NullLiteral", "BooleanLiteral", "StringLiteral", 
			"DecimalLiteral", "Identifier", "WS", "LineComment", "BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ComponentDecoratorContext componentDecorator() {
			return getRuleContext(ComponentDecoratorContext.class,0);
		}
		public TerminalNode Class() { return getToken(Parser.Class, 0); }
		public Identifier_Context identifier_() {
			return getRuleContext(Identifier_Context.class,0);
		}
		public TerminalNode OpenBrace() { return getToken(Parser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(Parser.CloseBrace, 0); }
		public TerminalNode EOF() { return getToken(Parser.EOF, 0); }
		public List<Import_Context> import_() {
			return getRuleContexts(Import_Context.class);
		}
		public Import_Context import_(int i) {
			return getRuleContext(Import_Context.class,i);
		}
		public List<StoreDeclContext> storeDecl() {
			return getRuleContexts(StoreDeclContext.class);
		}
		public StoreDeclContext storeDecl(int i) {
			return getRuleContext(StoreDeclContext.class,i);
		}
		public TerminalNode Export() { return getToken(Parser.Export, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Import) {
				{
				{
				setState(146);
				import_();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Store) {
				{
				{
				setState(152);
				storeDecl();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			componentDecorator();
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Export) {
				{
				setState(159);
				match(Export);
				}
			}

			setState(162);
			match(Class);
			setState(163);
			identifier_();
			setState(164);
			match(OpenBrace);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4785654952099882L) != 0) || ((((_la - 78)) & ~0x3f) == 0 && ((1L << (_la - 78)) & 7L) != 0)) {
				{
				{
				setState(165);
				statement();
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			match(CloseBrace);
			setState(172);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementStmtContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LoopsContext loops() {
			return getRuleContext(LoopsContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public ConsoleLogContext consoleLog() {
			return getRuleContext(ConsoleLogContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(Parser.SemiColon, 0); }
		public StatementStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterStatementStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitStatementStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitStatementStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			_localctx = new StatementStmtContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(174);
				block();
				}
				break;
			case 2:
				{
				setState(175);
				decl();
				}
				break;
			case 3:
				{
				setState(176);
				expr(0);
				}
				break;
			case 4:
				{
				setState(177);
				loops();
				}
				break;
			case 5:
				{
				setState(178);
				if_();
				}
				break;
			case 6:
				{
				setState(179);
				constructor();
				}
				break;
			case 7:
				{
				setState(180);
				consoleLog();
				}
				break;
			}
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(183);
				match(SemiColon);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlockStmtContext extends BlockContext {
		public TerminalNode OpenBrace() { return getToken(Parser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(Parser.CloseBrace, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStmtContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterBlockStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitBlockStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitBlockStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			_localctx = new BlockStmtContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(OpenBrace);
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4785654952099882L) != 0) || ((((_la - 78)) & ~0x3f) == 0 && ((1L << (_la - 78)) & 7L) != 0)) {
				{
				{
				setState(187);
				statement();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(193);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopsContext extends ParserRuleContext {
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public DoContext do_() {
			return getRuleContext(DoContext.class,0);
		}
		public LoopsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterLoops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitLoops(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitLoops(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopsContext loops() throws RecognitionException {
		LoopsContext _localctx = new LoopsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_loops);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case For:
				{
				setState(195);
				for_();
				}
				break;
			case While:
				{
				setState(196);
				while_();
				}
				break;
			case Do:
				{
				setState(197);
				do_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VariableTypeDeclaContext extends DeclContext {
		public VariableTypeDeclContext variableTypeDecl() {
			return getRuleContext(VariableTypeDeclContext.class,0);
		}
		public VariableTypeDeclaContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterVariableTypeDecla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitVariableTypeDecla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitVariableTypeDecla(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalFunctionContext extends DeclContext {
		public NormalFunctionDeclerationContext normalFunctionDecleration() {
			return getRuleContext(NormalFunctionDeclerationContext.class,0);
		}
		public NormalFunctionContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterNormalFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitNormalFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitNormalFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclaContext extends DeclContext {
		public VariableDeclContext variableDecl() {
			return getRuleContext(VariableDeclContext.class,0);
		}
		public VariableDeclaContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterVariableDecla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitVariableDecla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitVariableDecla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decl);
		try {
			setState(203);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new VariableDeclaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(200);
				variableDecl();
				}
				break;
			case 2:
				_localctx = new VariableTypeDeclaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(201);
				variableTypeDecl();
				}
				break;
			case 3:
				_localctx = new NormalFunctionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(202);
				normalFunctionDecleration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_Context extends ParserRuleContext {
		public Import_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_; }
	 
		public Import_Context() { }
		public void copyFrom(Import_Context ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportContext extends Import_Context {
		public TerminalNode Import() { return getToken(Parser.Import, 0); }
		public TerminalNode From() { return getToken(Parser.From, 0); }
		public TerminalNode StringLiteral() { return getToken(Parser.StringLiteral, 0); }
		public Identifier_Context identifier_() {
			return getRuleContext(Identifier_Context.class,0);
		}
		public TerminalNode SemiColon() { return getToken(Parser.SemiColon, 0); }
		public TerminalNode OpenBrace() { return getToken(Parser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(Parser.CloseBrace, 0); }
		public ImportContext(Import_Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitImport(this);
			else return visitor.visitChildren(this);
		}
	}
